--- a/pages/about.html
+++ b/pages/about.html
@@ -4,16 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pixel10 Studio | Home</title>
-  <link rel="icon" href="./images/favicon.ico">
+  <title>Pixel10 Studio | About</title>
+  <link rel="icon" href="../images/favicon.ico">
   <!-- Font Awsome -->
-  <link rel="stylesheet" href="./css/all.min.css">
-  <!-- carousel -->
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="../css/all.min.css">
   <!-- Main Styling -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
   <!-- Page Styling -->
-  <link rel="stylesheet" href="./css/home.css">
+  <link rel="stylesheet" href="../css/about.css">
 </head>
 
 <body>
@@ -61,41 +59,25 @@
         </a>
       </div>
       <ul>
-        <li><a href="./index.html" class="active">Home</a></li>
-        <li><a href="./pages/about.html">About</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="./pages/about.html" class="active">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Work</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
-    <div class="owl-carousel owl-theme">
-      <div class="item">
-        <video autoplay muted loop>
-          <source src="./video/About_1.mp4" type="video/mp4">
-        </video>
+    <video autoplay muted loop>
+      <source src="../video/About_1.mp4" type="video/mp4">
+    </video>
+    <div class="overlay">
+      <div class="about-text">
+        <p class="at">PIXEL10, a creative studio located in the iconic Leadenhall Building<br> in the heart of London,
+          partners with real estate agencies,<br> architects, and interior designers. We create photorealistic <br>
+          marketing CGI images that transform visions of unbuilt <br> architectural spaces into immersive, perceivable
+          experiences,<br> presenting each concept with accuracy and creativity.</p>
       </div>
-      <div class="item">
-        <video autoplay muted loop>
-          <source src="./video/Shot2.mp4" type="video/mp4">
-        </video>
-      </div>
-      <div class="item">
-        <video autoplay muted loop>
-          <source src="./video/Shot3.mp4" type="video/mp4">
-        </video>
-      </div>
-      <div class="item">
-        <video autoplay muted loop>
-          <source src="./video/Shot4.mp4" type="video/mp4">
-        </video>
-      </div>
-      <div class="item">
-        <video autoplay muted loop>
-          <source src="./video/Shot5.mp4" type="video/mp4">
-        </video>
-      </div>
+      <div class="services"><a href="#">Services</a></div>
     </div>
-    <p id="typed-text" class="element-text"></p>
     <footer>
       <a href="#"> <i class="fa-brands fa-behance"></i></a>
       <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -104,11 +86,6 @@
       <a href="#"><i class="fa-solid fa-envelope"></i></a>
     </footer>
   </div>
-  <script src="./js/Jquery.js"></script>
-  <script src="./js/owl.carousel.js"></script>
-  <script src="./js/type.js"></script>
-
-  <script src="js/main.js"></script>
 </body>
 
 </html>
