--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="image" content="https://i.ibb.co/RCJn7TG/demo.png">
+  <meta property="title" content="Pixel10 Studio | Home">
   <title>Pixel10 Studio | Home</title>
   <link rel="icon" href="./images/favicon.ico">
   <!-- Font Awsome -->
@@ -60,12 +62,20 @@
           </svg>
         </a>
       </div>
+      <i class="fa-solid fa-bars" id="bars"></i>
       <ul>
         <li><a href="./index.html" class="active">Home</a></li>
         <li><a href="./pages/about.html">About</a></li>
         <li><a href="./pages/services.html">Services</a></li>
         <li><a href="./pages/work.html">Work</a></li>
         <li><a href="./pages/contact.html">Contact</a></li>
+        <li>
+          <a href="#"> <i class="fa-brands fa-behance"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        </li>
       </ul>
     </nav>
     <div class="owl-carousel owl-theme">
@@ -107,7 +117,7 @@
   <script src="./js/Jquery.js"></script>
   <script src="./js/owl.carousel.js"></script>
   <script src="./js/type.js"></script>
-
+  <script src="./js/main.js"></script>
   <script src="js/home.js"></script>
 </body>
 
