--- a/pages/about.html
+++ b/pages/about.html
@@ -58,12 +58,20 @@
           </svg>
         </a>
       </div>
+      <i class="fa-solid fa-bars" id="bars"></i>
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="./about.html" class="active">About</a></li>
         <li><a href="./services.html">Services</a></li>
         <li><a href="./work.html">Work</a></li>
         <li><a href="./contact.html">Contact</a></li>
+        <li>
+          <a href="#"> <i class="fa-brands fa-behance"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        </li>
       </ul>
     </nav>
     <video autoplay muted loop>
@@ -86,6 +94,7 @@
       <a href="#"><i class="fa-solid fa-envelope"></i></a>
     </footer>
   </div>
+  <script src="../js/main.js"></script>
 </body>
 
 </html>
