--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pixel10 Studio | About</title>
+  <title>Pixel10 Studio | Contact Us</title>
   <link rel="icon" href="../images/favicon.ico">
   <!-- Font Awsome -->
   <link rel="stylesheet" href="../css/all.min.css">
@@ -58,12 +58,20 @@
           </svg>
         </a>
       </div>
+      <i class="fa-solid fa-bars" id="bars"></i>
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./services.html">Services</a></li>
         <li><a href="./work.html">Work</a></li>
         <li><a href="./contact.html" class="active">Contact</a></li>
+        <li>
+          <a href="#"> <i class="fa-brands fa-behance"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        </li>
       </ul>
     </nav>
 
@@ -100,6 +108,7 @@
       <p>Pixel10 Studio LTD Registered in England and Wales - Company Number: 15831908</p>
     </div>
   </div>
+  <script src="../js/main.js"></script>
 </body>
 
 </html>
