--- a/pages/services.html
+++ b/pages/services.html
@@ -60,12 +60,20 @@
           </svg>
         </a>
       </div>
+      <i class="fa-solid fa-bars" id="bars"></i>
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./services.html" class="active">Services</a></li>
         <li><a href="./work.html">Work</a></li>
         <li><a href="./contact.html">Contact</a></li>
+        <li>
+          <a href="#"> <i class="fa-brands fa-behance"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        </li>
       </ul>
     </nav>
     <video autoplay muted loop>
@@ -110,6 +118,7 @@
   </div>
   <script src="../js/Jquery.js"></script>
   <script src="../js/owl.carousel.js"></script>
+  <script src="../js/main.js"></script>
   <script src="../js/services.js"></script>
 </body>
 
