--- a/pages/work.html
+++ b/pages/work.html
@@ -59,12 +59,20 @@
           </svg>
         </a>
       </div>
+      <i class="fa-solid fa-bars" id="bars"></i>
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
         <li><a href="./services.html">Services</a></li>
         <li><a href="./work.html" class="active">Work</a></li>
         <li><a href="./contact.html">Contact</a></li>
+        <li>
+          <a href="#"> <i class="fa-brands fa-behance"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        </li>
       </ul>
     </nav>
     <div class="image-container">
@@ -407,6 +415,7 @@
     </footer>
   </div>
   <script src="../js/venobox.min.js"></script>
+  <script src="../js/main.js"></script>
   <script src="../js/work.js"></script>
 </body>
 
