--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="image" content="https://i.ibb.co/RCJn7TG/demo.png">
+  <meta property="title" content="Pixel10 Studio | Contact">
   <title>Pixel10 Studio | Contact Us</title>
   <link rel="icon" href="../images/favicon.ico">
   <!-- Font Awsome -->
