--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
           <source src="./video/Shot5.mp4" type="video/mp4">
         </video>
       </div>
+      <div class="item">
+        <video autoplay muted loop>
+          <source src="./video/Shot6.mp4" type="video/mp4">
+        </video>
+      </div>
     </div>
     <p id="typed-text" class="element-text"></p>
     <footer>
